fixed the alignment issue with the model.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,12 @@ https://www.color-hex.com/color-palette/1045 */
     --grey: #e0e0e0;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    text-align: center;
+}
+
 body {
     display: flex;
     min-height: 100vh;
@@ -123,11 +129,23 @@ main {
 
 .modal-content img {
     position: relative;
-    left: 30%;
     padding: 10px;
 }
 
 .modal-content p {
     font-family: "Pokemon GB";
     text-align: center;
+}
+
+.right-side, .left-side {
+    height: 100vh;
+    width: 100%;
+};
+
+.left-side {
+    background-color: red;
+}
+
+.right-side {
+    background-color: blue;
 }
